--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -10,7 +10,7 @@
 
 html{
     font-size: 62.5%;
-
+    overflow-x: hidden
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Lalezar&family=Roboto+Condensed:wght@300;400;700&display=swap');
