--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,51 +1,51 @@
-header{
+header {
     display: flex;
     background-color: #efefef;
     padding: 10px 50px;
     align-items: center;
 }
 
-header .container{
+header .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-header .container .logo{
+header .container .logo {
     width: 29rem;
 }
 
-header .container .nav_bar{
+header .container .nav_bar {
     display: flex;
     font-size: 2rem;
     font-weight: 600;
 }
 
-header .container  .nav_bar li{
-    margin:0px 20px ;
+header .container .nav_bar li {
+    margin: 0px 20px;
     text-transform: capitalize;
 }
 
-header .container  .nav_bar li:hover{
+header .container .nav_bar li:hover {
     color: var(--primary-color);
 }
 
-header .container  .mobile_menu{
+header .container .mobile_menu {
     display: none;
 }
 
-.banner{
+.banner {
     background-image: url(../img/banner.jpg);
     background-size: 100%;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position:right ;
+    background-position: right;
     height: 91vh;
     display: flex;
     align-items: center;
 }
 
-.banner .container{
+.banner .container {
     background-color: #34226672;
     height: 100%;
     width: 100%;
@@ -54,7 +54,7 @@ header .container  .mobile_menu{
     flex-direction: column;
 }
 
-.banner .container h1{
+.banner .container h1 {
     font-size: 6rem;
     /* color: #efefef; */
     color: var(--sub-color);
@@ -63,28 +63,29 @@ header .container  .mobile_menu{
 
 }
 
-.banner .container p{
+.banner .container p {
     font-size: 2rem;
     font-weight: 550;
     padding: 1rem 0rem;
     color: #fff;
-    text-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
 
-.banner .container span{
+.banner .container span {
     color: var(--sub-color);
+    font-size: 2.2rem;
 }
 
-.banner .container ul{
+.banner .container ul {
     font-size: 2rem;
     color: #fff;
 }
 
-.banner .container ul i{
+.banner .container ul i {
     color: var(--sub-color);
 }
 
-.banner .container .cta{
+.banner .container .cta {
     font-size: 2.4rem;
     text-transform: uppercase;
     max-width: 30rem;
@@ -101,43 +102,43 @@ header .container  .mobile_menu{
     transition: 0.5s;
 }
 
-.banner .container button:hover{
+.banner .container button:hover {
     background-color: var(--primary-color);
     box-shadow: 0px 5px 10px #34226694;
 }
 
-.banner .container button:active{
+.banner .container button:active {
     transform: scale(0.9);
 }
 
 /*  */
 
-.review{
+.review {
     padding: 15rem 0rem;
 }
 
-.review .container{
+.review .container {
     display: flex;
     justify-content: space-between;
 }
 
 .review .container .right,
-.review .container .left{
+.review .container .left {
     width: 50%;
 }
 
-.review .container .left h2{
+.review .container .left h2 {
     font-size: 4.2rem;
     color: var(--primary-color);
 }
 
-.review .container .left p{
+.review .container .left p {
     font-size: 2rem;
     color: var(--gray-text);
     margin-top: 1rem;
 }
 
-.review .container .left span{
+.review .container .left span {
     font-weight: 550;
     font-size: 2.2rem;
     color: var(--sub-color);
@@ -145,7 +146,7 @@ header .container  .mobile_menu{
 
 .review .container .right img {
     display: flex;
-    max-width:100% ;
+    max-width: 100%;
     margin: 0 auto;
     border-radius: 1rem;
 }
@@ -156,43 +157,43 @@ header .container  .mobile_menu{
     margin: 20rem 0rem;
 } */
 
-.method{
+.method {
     background-color: #efefef;
     padding: 15rem 0rem;
 }
 
-.method .container{
+.method .container {
     display: flex;
     justify-content: space-between;
 }
 
 .method .container .right,
-.method .container .left{
+.method .container .left {
     width: 50%;
 }
 
-.method .container .right h2{
+.method .container .right h2 {
     font-size: 4.2rem;
     color: var(--primary-color);
 }
 
-.method .container .right ul{
+.method .container .right ul {
     font-size: 2rem;
     color: var(--gray-text);
     margin-top: 1rem;
 }
 
-.method .container .right ul li{
+.method .container .right ul li {
     padding: 1rem 0rem;
 }
 
-.method .container .right span{
+.method .container .right span {
     font-weight: 550;
     /* color: var(--primary-color); */
 }
 
 
-.method .container .right i{
+.method .container .right i {
     color: var(--sub-color);
 }
 
@@ -209,37 +210,37 @@ header .container  .mobile_menu{
     padding: 15rem 0rem;
 }
 
-.blog .container{
+.blog .container {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 5rem;
 }
 
-.blog .container .card{
+.blog .container .card {
     background-color: var(--sub-color);
     display: flex;
     flex-direction: column;
     align-items: center;
     border-radius: 2rem;
-    box-shadow: 0rem 0rem 1rem rgba(0,0,0,0.5);
+    box-shadow: 0rem 0rem 1rem rgba(0, 0, 0, 0.5);
 }
 
-.blog .container .card img{
+.blog .container .card img {
     max-height: 30rem;
     width: 100%;
     padding: 1.5rem;
-    border-radius: 2.5rem ;
+    border-radius: 2.5rem;
     object-fit: cover;
 }
 
-.blog .container .card .coment{
+.blog .container .card .coment {
     font-size: 2rem;
     color: #fff;
     text-align: justify;
     padding: 2.5rem;
 }
 
-.blog .container .card .infor{
+.blog .container .card .infor {
     font-size: 1.5rem;
     color: #fff;
     padding: 0rem 2.5rem 1.5rem;
@@ -247,29 +248,29 @@ header .container  .mobile_menu{
 
 /*  */
 
-.mobile-ver{
-    padding-top: 15rem ;
+.mobile-ver {
+    padding-top: 15rem;
 }
 
-.mobile-ver .top{
+.mobile-ver .top {
     padding: 10rem;
-    background: radial-gradient(circle, rgba(143,118,213,1) 0%, rgba(52,34,102,1) 100%);  
+    background: radial-gradient(circle, rgba(143, 118, 213, 1) 0%, rgba(52, 34, 102, 1) 100%);
     display: flex;
 }
 
 .mobile-ver .top .right,
-.mobile-ver .top .left{
+.mobile-ver .top .left {
     width: 50%;
 }
 
-.mobile-ver .top .left h2{
+.mobile-ver .top .left h2 {
     font-size: 4.8rem;
     text-transform: uppercase;
     color: var(--sub-color);
     padding-bottom: 4rem;
 }
 
-.mobile-ver .top .left p{
+.mobile-ver .top .left p {
     font-size: 2.8rem;
     font-weight: 550;
     color: #fff;
@@ -278,7 +279,7 @@ header .container  .mobile_menu{
 
 }
 
-.mobile-ver .top .left .chPlay{
+.mobile-ver .top .left .chPlay {
     min-width: 20rem;
     font-size: 2.6rem;
     padding: 1rem 1rem 1rem 4.5rem;
@@ -294,7 +295,7 @@ header .container  .mobile_menu{
     cursor: pointer;
 }
 
-.mobile-ver .top .left .appStore{
+.mobile-ver .top .left .appStore {
     min-width: 20rem;
     font-size: 2.6rem;
     padding: 1rem 1rem 1rem 4.5rem;
@@ -309,66 +310,69 @@ header .container  .mobile_menu{
     cursor: pointer;
 }
 
-.mobile-ver .top .right img{
+.mobile-ver .top .right img {
     max-width: 100%;
     height: 40rem;
     object-fit: cover;
     animation: up-down 3s infinite alternate;
 }
 
-@keyframes up-down{
-    0%{
+@keyframes up-down {
+    0% {
         transform: translateY(-5rem);
     }
-    100%{
+
+    100% {
         transform: translateY(0rem);
     }
 }
 
-.mobile-ver .bottom{
+.mobile-ver .bottom {
     padding: 10rem 0rem;
 }
 
-.mobile-ver .bottom h2{
+.mobile-ver .bottom h2 {
     font-size: 3.5rem;
     text-align: center;
     color: var(--primary-color);
 }
 
-.mobile-ver .bottom .cards{
+.mobile-ver .bottom .cards {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 5rem;
     margin-top: 5rem;
     align-items: center;
 }
 
-.mobile-ver .bottom .card{
+.mobile-ver .bottom .card {
     min-height: 40rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    text-align: center;
 }
 
-.mobile-ver .bottom .card img{
+.mobile-ver .bottom .card img {
     height: 30rem;
     width: 30rem;
     object-fit: cover;
     padding: 2rem;
+    margin: 0 auto;
 
 }
 
-.mobile-ver .bottom .speak img{
+.mobile-ver .bottom .speak img {
     width: 40rem !important;
 }
 
-.mobile-ver .bottom .card h5{
+.mobile-ver .bottom .card h5 {
     font-size: 2.8rem;
     color: var(--primary-color);
-    
+
 }
 
-.mobile-ver .bottom .card p{
+.mobile-ver .bottom .card p {
     font-size: 2rem;
 }
 
@@ -381,55 +385,61 @@ header .container  .mobile_menu{
     align-items: center;
 }
 
-.sigin .container{
+.sigin .container {
     font-size: 2.6rem;
     text-align: center;
     padding: 5rem;
 }
 
-.sigin .container h2{
+.sigin .container h2 {
     color: var(--primary-color);
+    margin-bottom: 2rem;
 }
 
-.sigin .container form{
+.sigin .container form {
     margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    width: 50rem;
 }
 
-.sigin .container form input{
+.sigin .container form input {
     padding: 0.8rem 2rem;
     min-width: 25rem;
-    border-radius: 2rem 0rem 0rem 2rem;
+    border-radius: 1rem;
+    margin: 0.5rem 0rem;
     border: 2px solid var(--sub-color);
     outline: none;
 }
 
 
-.sigin .container form button{
+.sigin .container form button {
     padding: 0.8rem 1rem;
-    border:2px solid var(--sub-color);
+    border: 2px solid var(--sub-color);
     background-color: var(--sub-color);
     color: #fff;
     text-transform: capitalize;
     font-weight: 600;
-    border-radius: 0rem 2rem 2rem 0rem;
-    margin-left: -0.6rem;
+    border-radius: 1rem;
+    margin-top: 0.5rem;
 }
 
 /*  */
 
-footer{
+footer {
     background-color: var(--sub-color);
     margin-top: 5rem;
 }
 
 
-footer .container{
+footer .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-footer .container .left .logo{
+footer .container .left .logo {
     width: 29rem;
     padding: 1rem;
 }
@@ -441,103 +451,179 @@ footer .container .left ul {
 }
 
 
-.reveral{
+.reveral {
     transform: translateY(150px);
     opacity: 0;
     transition: all 0.5s ease;
 }
 
-.reveral.active{
+.reveral.active {
     transform: translateY(0px);
     opacity: 1;
 }
 
 
 @media screen and (max-width:950px) {
-    header .container .nav_bar{
+
+    header{
+        padding:1rem 2rem ;
+    }
+
+    header .container .nav_bar {
         display: none;
     }
 
-    header .container .mobile_menu{
+    header .container .mobile_menu {
         display: initial;
 
     }
 
-    header .container .mobile_menu i{
+    header .container .mobile_menu i {
         font-size: 3rem;
     }
 
-    header .container .mobile_menu .nav_bar-mobile{
+    header .container .mobile_menu .nav_bar-mobile {
         position: absolute;
         background-color: #efefef;
         width: 100%;
         left: 0;
         text-align: end;
         transform: translateY(-40rem);
+        opacity: 0;
         transition: 0.5s;
+        z-index: 1;
     }
 
-    header .container .mobile_menu .nav_bar-mobile li{
+    header .container .mobile_menu .nav_bar-mobile li {
         font-size: 2rem;
-        font-weight: 600; 
+        font-weight: 600;
         padding: 1rem 5rem;
     }
 
 
-    header .container .mobile_menu .nav_bar-mobile.open{
-        transform: translateY(0);
+    header .container .mobile_menu .nav_bar-mobile.open {
+        transform: translateY(0.1rem);
+        opacity: 1;
+        box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5);
     }
 
-    .container{
+    .banner{
+        max-height: 100vh;
+        background-size: 70vh 160vw;
+        background-attachment: unset;
+    }
+
+    .banner .container{
+        max-height: 100vh;
+        backdrop-filter: blur(3px);
+        text-align: center;
+    }
+
+    .banner .container h1{
+        font-size:5rem ;
+        padding-top: 10rem;
+    }
+
+    .banner ul{
+        display: none;
+    }
+
+    .container {
         width: 90%;
     }
 
+    .review,
+    .method,
+    .blog{
+        padding: 5rem 0rem;
+    }
+
     .review .container,
-    .method .container{
+    .method .container {
         display: flex;
         flex-direction: column;
         gap: 1rem;
     }
 
     .review .container .left,
-    .review .container .right{
+    .review .container .right {
         width: 100%;
     }
 
     .method .container .left,
-    .method .container .right{
+    .method .container .right {
         width: 100%;
     }
 
-    .blog .container{
+    .blog .container {
         display: grid;
         grid-template-columns: 1fr;
     }
 
-    .mobile-ver .top{
+    .mobile-ver .top {
         display: flex;
         flex-direction: column;
     }
 
     .mobile-ver .top .left,
-    .mobile-ver .top .right{
+    .mobile-ver .top .right {
         width: 100%;
     }
 
-    .mobile-ver .top .left .chPlay{
+    .mobile-ver .top .left .chPlay {
         margin-bottom: 1rem;
     }
 
-    .mobile-ver .top .right img{
+    .mobile-ver .top .left h2{
+        text-align: center;
+        font-size: 4rem;
+    }
+
+    .mobile-ver .top .left p{
+        font-size: 2rem;
+        text-align: center;
+    }
+
+    .mobile-ver .top .left button{
+        width: 100%;
+    }
+
+    .mobile-ver .top .right{
+        position: absolute;
+    }
+
+    .mobile-ver .top .right img {
         display: none;
     }
 
-    .mobile-ver .bottom .cards{
+    .mobile-ver .bottom .cards {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .mobile-ver .bottom .cards img{
+        margin: 0 auto;
+        padding: 0;
+        height: 25rem;
+        width: 25rem !important;
+        object-fit: unset;
+    }
+
+    .sigin .container form {
+        max-width: 100%;
+        margin: 0;
+    }
+
+    footer .container {
         display: flex;
         flex-direction: column;
     }
 
-    footer img{
-        display: none;
+    footer .container .left img{
+        display: flex;
+        margin:  0 auto;
     }
 }
